# Legacy

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  build.ps1  compliance.config.json  devNeuroSim.sln
.github/workflows/: compliance-only.yml  legacy-neurosim.yml  neurosim-ci.yml
NeuroSim.Core/: CMakeLists.txt
NeuroSim.Core/include/: export.h
NeuroSim.Core/include/api/: NativeAPI.h
NeuroSim.Core/include/genome/: BinaryGenome.h  GraphGenome.h  IGenome.h  RealValuedGenome.h  TreeGenome.h
NeuroSim.Core/src/api/: NativeAPI.cpp
NeuroSim.Core/src/genome/: BinaryGenome.cpp  GraphGenome.cpp  RealValuedGenome.cpp  TreeGenome.cpp
NeuroSim.Engine/: NeuroSim.Engine.csproj
NeuroSim.Engine/Engine/: EvolutionConfig.cs  EvolutionLog.cs  GAEngine.cs  GAEngineFactory.cs
NeuroSim.Engine/FitnessEvaluators/: BuiltinFunctions.cs
NeuroSim.Engine/Genomes/: BinaryGenome.cs  Genome.cs  GraphGenome.cs  PermutationGenome.cs  RealValuedGenome.cs  TreeGenome.cs
NeuroSim.Engine/Operators/: Interfaces.cs
NeuroSim.Engine/Operators/Crossover/: BinaryCrossover.cs  GraphCrossover.cs  PermutationCrossover.cs  RealCrossover.cs  TreeCrossover.cs
NeuroSim.Engine/Operators/Mutation/: BinaryMutation.cs  GraphMutation.cs  PermutationMutation.cs  RealMutation.cs  TreeMutation.cs
NeuroSim.Engine/Population/: Individual.cs  Population.cs
NeuroSim.Problems/: NeuroSim.Problems.csproj
NeuroSim.Problems.Tests/: MazePlaygroundTests.cs  NeuroSim.Problems.Tests.csproj  TspPlaygroundTests.cs
NeuroSim.Problems/CSP/: BinPackProblem.cs  CspGASetup.cs
NeuroSim.Problems/Knapsack/: KnapsackDatasets.cs  KnapsackProblem.cs  KnapsackRunConfig.cs
NeuroSim.Problems/Maze/: EditableMaze.cs  MazeEvolver.cs  MazeProblem.cs  MazeRunConfig.cs
NeuroSim.Problems/TSP/: TspConfig.cs  TspDatasets.cs  TspEvolver.cs  TspGASetup.cs  TspProblem.cs
NeuroSim.Python/: CMakeLists.txt  bindings.cpp  pyproject.toml
NeuroSim.Python/examples/: binary_ga.py  symbolic_regression.py
NeuroSim.Python/neurosim/: __init__.py
NeuroSim.SystemTests/: MazeSystemTests.cs  NeuroSim.SystemTests.csproj  TspSystemTests.cs
NeuroSim.UI/: App.xaml  App.xaml.cs  NeuroSim.UI.csproj
NeuroSim.UI/Converters/: Converters.cs
NeuroSim.UI/Helpers/: ExportHelper.cs  TspGifExporter.cs
NeuroSim.UI/Models/: ChartSlot.cs  ExperimentSnapshot.cs  GenomeDisplayInfo.cs  MazeExperimentSnapshot.cs  StatBadge.cs
NeuroSim.UI/Themes/: Styles.xaml
NeuroSim.UI/ViewModels/: AnalyticsViewModel.cs  BlueprintViewModel.cs  CspPlaygroundViewModel.cs  ExperimentViewModel.cs  GraphPlaygroundViewModel.cs  HomeViewModel.cs  MainViewModel.cs  MazePlaygroundViewModel.cs  NavigationService.cs  PlaygroundViewModelBase.cs  ProblemSelectorViewModel.cs  TspPlaygroundViewModel.cs  ViewModelBase.cs  VisualizationViewModel.cs
NeuroSim.UI/Views/: AnalyticsView.xaml  AnalyticsView.xaml.cs  BlueprintEditorView.xaml  BlueprintEditorView.xaml.cs  CityWizardDialog.xaml  CityWizardDialog.xaml.cs  CspPlaygroundView.xaml  CspPlaygroundView.xaml.cs  ExperimentSetupView.xaml  ExperimentSetupView.xaml.cs  GenomeDisplayView.xaml  GenomeDisplayView.xaml.cs  GraphCanvasView.xaml  GraphCanvasView.xaml.cs  GraphPlaygroundView.xaml  GraphPlaygroundView.xaml.cs  HomePage.xaml  HomePage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MazePlaygroundView.xaml  MazePlaygroundView.xaml.cs  PlaygroundAnalysisView.xaml  PlaygroundAnalysisView.xaml.cs  ProblemSelectorView.xaml  ProblemSelectorView.xaml.cs  TreeCanvasView.xaml  TreeCanvasView.xaml.cs  TspPlaygroundView.xaml  TspPlaygroundView.xaml.cs  VisualizationView.xaml  VisualizationView.xaml.cs
Snapshots/: GARwpmxSwa_20260316_131512.tspsnap  GATOXTwoOpt_20260316_131335.tspsnap  GA_Ulysses16_OX_2Opt_20260316_182344.tspsnap  GA_Ulysses16_PMX_2Opt_20260316_132611.tspsnap  Maze_Custom_20260316_182449.mazesnap  Maze_GeneticAlgorithm_Labyrinth25×25_Inversion_20260316_20260316_161033.mazesnap  Maze_GeneticAlgorithm_Labyrinth25×25_Inversion_20260316_20260316_161106.mazesnap  Maze_GeneticAlgorithm_Labyrinth25×25_Inversion_20260316_20260316_161128.mazesnap
docs/: ADDING_A_PLAYGROUND.md  ARCHITECTURE.md  OPERATORS.md
scripts/: compliance.config.json  compliance.ps1  compliance.sh
(+7 files in other folders)
